--- a/server/.env
+++ b/server/.env
@@ -11,7 +11,7 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRES_IN=7d
 
 # CORS Configuration
-FRONTEND_URL=https://pwd-zeta.vercel.app,http://localhost:8080
+FRONTEND_URL=https://new-chi-ashen.vercel.app,https://pwd-zeta.vercel.app,http://localhost:8080
 
 # Encryption Configuration
 ENCRYPTION_KEY=your-32-character-encryption-key-here
